Kompose/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
      convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe
          convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/js-stack-com-net: "true"
        io.kompose.network/js-stack-net: "true"
        io.kompose.service: api
    spec:
      containers:
      - args:
        - npm
        - run
        - start
        image: docker-js-stack-api
        imagePullPolicy: ""
        name: node-comp-js-stack
        ports:
        - containerPort: 8080
        resources: {}
        stdin: true
        tty: true
        workingDir: /app
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
